--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <title>Webpack Starter Kit</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Webpack Starter Kit</title>
+</head>
+
+<body>
+  <header>
     <h1>Webpack Starter Kit</h1>
+  </header>
+  <nav>
 
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
+  </nav>
+  <main>
+    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px"> -->
+  </main>
+  <aside>
 
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
-  </body>
+  </aside>
+  <footer>
+
+  </footer>
+  <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
+</body>
 </html>
