--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   </nav>
   <main>
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px"> -->
+    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
   </main>
   <aside>
 
