Add form to nav

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,16 @@
     <h1>Time Travelers</h1>
   </header>
   <nav>
-
+    <section class="trip-request">
+      <input class="form date">
+      <input class="form duration">
+      <input class="form travelers">
+      <input class="form destination">
+      <article class="quote-button">Get a Quote!</article>
+    </section>
   </nav>
   <main>
-    <!-- <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px"> -->
+
   </main>
   <aside>
 
@@ -22,6 +28,9 @@
   <footer>
 
   </footer>
+
+  <article class="trip-request hidden">
+  </article>
   <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
 </body>
 </html>
