Center form elements

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
   </header>
   <nav>
     <section class="trip-request">
-      <input class="form date">
+      <input type="date" class="form date">
       <input class="form duration">
-      <input class="form travelers">
+      <input type="number" class="form travelers">
       <input class="form destination">
       <article class="quote-button">Get a Quote!</article>
     </section>
