Add query selector and inputs to JS

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
   </header>
   <nav>
     <section class="trip-request">
-      <input type="date" class="form date">
-      <input class="form duration">
-      <input type="number" class="form travelers">
-      <input class="form destination">
+      <input type="date" class="form-date">
+      <input class="form-duration">
+      <input type="number" class="form-travelers">
+      <input class="form-destination">
       <article class="quote-button">Get a Quote!</article>
     </section>
   </nav>
@@ -29,7 +29,7 @@
 
   </footer>
 
-  <article class="trip-request hidden">
+  <article class="trip-quote hidden">
   </article>
   <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
 </body>
