Display trip estimate

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,15 @@
   </header>
   <nav>
     <section class="trip-request">
-      <input type="date" class="form-date">
-      <input class="form-duration">
-      <input type="number" class="form-travelers">
-      <input class="form-destination">
+      <p>Plan a trip!</p>
+      <label for="form-date">Departure Date</label>
+      <input type="date" class="form-date" id="form-date">
+      <label for="form-duration">Number of Days</label>
+      <input type="number" class="form-duration" id="form-duration">
+      <label for="form-travelers">Number of Travelers</label>
+      <input type="number" class="form-travelers" id="form-travelers">
+      <label for="form-destination">Destination</label>
+      <input class="form-destination" id="form-destination">
       <article class="quote-button">Get a Quote!</article>
     </section>
   </nav>
