--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,13 @@
 
   </footer>
 
-  <article class="trip-quote hidden">
+  <article class="modal">
+    <article class="modal-content">
+      <span class="close">Close</span>
+      <section class="estimate-display">
+        
+      </section>
+    </article>
   </article>
   <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
 </body>
