Display pending request on submission

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
         
       </section>
     </article>
+    <button class="request-button">Book This Vacation</button>
   </article>
   <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
 </body>
