Pass lighthouse and add some relevant tags

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
   <header>
     <h1>Time Travelers</h1>
   </header>
-  <nav>
-    <section class="trip-request">
+  <nav role="navigation">
+    <h1 class="hidden">Navigation</h1>
+    <article class="trip-request">
       <p>Plan a trip!</p>
       <label for="form-date">Departure Date</label>
       <input type="date" class="form-date" id="form-date">
@@ -22,15 +23,18 @@
       <label for="form-destination">Destination</label>
       <input class="form-destination" id="form-destination">
       <article class="quote-button">Get a Quote!</article>
-    </section>
+    </article>
   </nav>
   <main>
+    <h1 class="hidden">All Trips</h1>
 
   </main>
   <aside>
+    <h1>Profile</h1>
 
   </aside>
-  <footer>
+  <footer >
+    <h1 class="hidden">Footer</h1>
 
   </footer>
 
