Move modal styles and touch up accessibility

--- a/src/index.html
+++ b/src/index.html
@@ -40,12 +40,12 @@
 
   <article class="modal">
     <article class="modal-content">
-      <span class="close">Close</span>
+      <section class="close">Close</section>
       <section class="estimate-display">
         
       </section>
+      <button class="request-button">Book This Vacation</button>
     </article>
-    <button class="request-button">Book This Vacation</button>
   </article>
   <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
 </body>
