--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <input type="number" class="form-travelers" id="form-travelers">
       <label for="form-destination">Destination</label>
       <input class="form-destination" id="form-destination">
-      <article class="quote-button">Get a Quote</article>
+      <button class="quote-button">Get a Quote</button>
     </article>
   </nav>
   <main>
