--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-  <header>
+  <header tabindex="0">
     <h1>Time Travelers</h1>
   </header>
-  <nav role="navigation">
+  <nav role="navigation" tabindex="0">
     <h1 class="hidden">Navigation</h1>
     <article class="trip-request">
       <p>Plan a trip!</p>
@@ -25,20 +25,7 @@
       <button class="quote-button">Get a Quote</button>
     </article>
   </nav>
-  <main>
-    <h1 class="hidden">All Trips</h1>
-
-  </main>
-  <aside>
-    <h1>Profile</h1>
-
-  </aside>
-  <footer >
-    <h1 class="hidden">Footer</h1>
-
-  </footer>
-
-  <article class="modal">
+  <article class="modal" tabindex="0">
     <article class="modal-content">
       <section class="close">Close</section>
       <section class="estimate-display">
@@ -47,6 +34,20 @@
       <button class="request-button">Book This Vacation</button>
     </article>
   </article>
+  <main tabindex="0">
+    <h1 class="hidden">All Trips</h1>
+
+  </main>
+  <aside tabindex="0">
+    <h1>Profile</h1>
+
+  </aside>
+  <footer tabindex="0">
+    <h1 class="hidden">Footer</h1>
+
+  </footer>
+
+  
   <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
 </body>
 </html>
