Display login page on document load. Adjust text to be all caps

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,19 @@
 </head>
 
 <body>
+  <section class="login-display">
+    <h1>WELCOME TO TIME TRAVELERS</h1>
+    <p>PLEASE ENTER YOUR ACCOUNT INFO</p>
+    <label for="form-username">USERNAME</label>
+    <input type="text" class="form-username" id="form-username">
+    <label for="form-password">PASSWORD</label>
+    <input type="text" class="form-password" id="form-password">
+    <button class="login-button">ENTER SITE</button>
+  </section>
   <header tabindex="0">
-    <h1>Time Travelers</h1>
+    <h1>TIME TRAVELERS</h1>
   </header>
   <nav role="navigation" tabindex="0">
-    <h1 class="hidden">Navigation</h1>
     <article class="trip-request">
       <p>Plan a trip!</p>
       <label for="form-date">Departure Date</label>
@@ -27,23 +35,23 @@
   </nav>
   <article class="modal" tabindex="0">
     <article class="modal-content">
-      <section class="close">Close</section>
+      <section class="close">CLOSE</section>
       <section class="estimate-display">
         
       </section>
-      <button class="request-button">Book This Vacation</button>
+      <button class="request-button">BOOK THIS VACATION</button>
     </article>
   </article>
   <main tabindex="0">
-    <h1 class="hidden">All Trips</h1>
+    <h1>ALL TRIPS</h1>
 
   </main>
   <aside tabindex="0">
-    <h1>Profile</h1>
+    <h1>PROFILE</h1>
 
   </aside>
   <footer tabindex="0">
-    <h1 class="hidden">Footer</h1>
+    <h1>FOOTER</h1>
 
   </footer>
 
