Finish uppercasing HTML

--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,16 @@
   </header>
   <nav role="navigation" tabindex="0">
     <article class="trip-request">
-      <p>Plan a trip!</p>
-      <label for="form-date">Departure Date</label>
+      <p>PLAN A TRIP!</p>
+      <label for="form-date">DEPARTURE DATE</label>
       <input type="date" class="form-date" id="form-date">
-      <label for="form-duration">Number of Days</label>
+      <label for="form-duration">NUMBER OF DAYS</label>
       <input type="number" class="form-duration" id="form-duration">
-      <label for="form-travelers">Number of Travelers</label>
+      <label for="form-travelers">NUMBER OF TRAVELERS</label>
       <input type="number" class="form-travelers" id="form-travelers">
-      <label for="form-destination">Destination</label>
+      <label for="form-destination">DESTINATION</label>
       <input class="form-destination" id="form-destination">
-      <button class="quote-button">Get a Quote</button>
+      <button class="quote-button">GET A QUOTE</button>
     </article>
   </nav>
   <article class="modal" tabindex="0">
