Add initial HTML for admin display

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,24 @@
     <h1>FOOTER</h1>
 
   </footer>
+  <section class="admin-display">
+    <header tabindex="0">
+      <h1>TIME TRAVELERS ADMIN VIEW</h1>
+    </header>
+    <article class="modal" tabindex="0">
+      <article class="modal-content">
+        <section class="close">CLOSE</section>
+        <section class="estimate-display">
+          
+        </section>
+        <button class="request-button">APPROVE/button>
+      </article>
+    </article>
+    <main tabindex="0">
+      <h1>ALL  PENDING TRIPS</h1>
+  
+    </main>
+  </section>
 
   
   <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
