--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
     <input type="text" class="form-password" id="form-password">
     <button class="login-button">ENTER SITE</button>
   </section>
-  <header tabindex="0">
+  <header class="traveler-header" tabindex="0">
     <h1>TIME TRAVELERS</h1>
   </header>
-  <nav role="navigation" tabindex="0">
+  <nav class="traveler-nav" role="navigation" tabindex="0">
     <article class="trip-request">
       <p>PLAN A TRIP!</p>
       <label for="form-date">DEPARTURE DATE</label>
@@ -33,7 +33,7 @@
       <button class="quote-button">GET A QUOTE</button>
     </article>
   </nav>
-  <article class="modal" tabindex="0">
+  <article class="traveler-modal" tabindex="0">
     <article class="modal-content">
       <section class="close">CLOSE</section>
       <section class="estimate-display">
@@ -42,23 +42,23 @@
       <button class="request-button">BOOK THIS VACATION</button>
     </article>
   </article>
-  <main tabindex="0">
+  <main class="traveler-main" tabindex="0">
     <h1>ALL TRIPS</h1>
 
   </main>
-  <aside tabindex="0">
+  <aside class="traveler-aside" tabindex="0">
     <h1>PROFILE</h1>
 
   </aside>
-  <footer tabindex="0">
+  <footer class="traveler-footer" tabindex="0">
     <h1>FOOTER</h1>
 
   </footer>
   <section class="admin-display">
-    <header tabindex="0">
+    <header class="admin-header" tabindex="0">
       <h1>TIME TRAVELERS ADMIN VIEW</h1>
     </header>
-    <article class="modal" tabindex="0">
+    <article class="admin-modal" tabindex="0">
       <article class="modal-content">
         <section class="close">CLOSE</section>
         <section class="estimate-display">
@@ -67,7 +67,7 @@
         <button class="request-button">APPROVE/button>
       </article>
     </article>
-    <main tabindex="0">
+    <main class="admin-main" tabindex="0">
       <h1>ALL  PENDING TRIPS</h1>
   
     </main>
