Present admin modal popups

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
     <article class="admin-modal" tabindex="0">
       <article class="modal-content">
         <section class="close">CLOSE</section>
-        <section class="estimate-display">
+        <section class="content-display">
           
         </section>
-        <button class="request-button">APPROVE/button>
+        <button class="request-button">APPROVE</button>
       </article>
     </article>
     <main class="admin-main" tabindex="0">
@@ -54,7 +54,7 @@
   <article class="traveler-modal" tabindex="0">
     <article class="modal-content">
       <section class="close">CLOSE</section>
-      <section class="estimate-display">
+      <section class="content-display">
         
       </section>
       <button class="request-button">BOOK THIS VACATION</button>
