Break the traveler request button. Fuck

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     </header>
     <article class="admin-modal" tabindex="0">
       <article class="modal-content">
-        <section class="close">CLOSE</section>
-        <section class="content-display">
+        <section class="close-approval">CLOSE</section>
+        <section class="admin-content-display content-display">
           
         </section>
         <button class="request-button">APPROVE</button>
@@ -53,8 +53,8 @@
   </nav>
   <article class="traveler-modal" tabindex="0">
     <article class="modal-content">
-      <section class="close">CLOSE</section>
-      <section class="content-display">
+      <section class="close-quote">CLOSE</section>
+      <section class="traveler-content-display content-display">
         
       </section>
       <button class="request-button">BOOK THIS VACATION</button>
