Fix bug with HTML class used twice

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <section class="admin-content-display content-display">
           
         </section>
-        <button class="request-button">APPROVE</button>
+        <button class="approve-button">APPROVE</button>
       </article>
     </article>
     <main class="admin-main" tabindex="0">
