Style admin nav

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
         <button class="approve-button">APPROVE</button>
       </article>
     </article>
+    <nav class="admin-nav" tabindex="0">
+      
+    </nav>
     <main class="admin-main" tabindex="0">
       <h1>ALL  PENDING TRIPS</h1>
   
