Start media queries

--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,14 @@
       <article class="modal-content">
         <section class="close-approval">CLOSE</section>
         <section class="admin-content-display content-display">
-          
         </section>
         <button class="approve-button">APPROVE</button>
       </article>
     </article>
     <nav class="admin-nav" tabindex="0">
-
     </nav>
     <main class="admin-main" tabindex="0">
       <h1>ALL  PENDING TRIPS</h1>
-  
     </main>
   </section>
   <section class="login-display">
@@ -45,9 +42,9 @@
       <p>PLAN A TRIP!</p>
       <label for="form-date">DEPARTURE DATE</label>
       <input type="date" class="form-date" id="form-date">
-      <label for="form-duration">NUMBER OF DAYS</label>
+      <label for="form-duration">DAYS</label>
       <input type="number" class="form-duration" id="form-duration">
-      <label for="form-travelers">NUMBER OF TRAVELERS</label>
+      <label for="form-travelers">TRAVELERS</label>
       <input type="number" class="form-travelers" id="form-travelers">
       <label for="form-destination">DESTINATION</label>
       <input class="form-destination" id="form-destination">
@@ -58,26 +55,18 @@
     <article class="modal-content">
       <section class="close-quote">CLOSE</section>
       <section class="traveler-content-display content-display">
-        
       </section>
       <button class="request-button">BOOK THIS VACATION</button>
     </article>
   </article>
   <main class="traveler-main" tabindex="0">
     <h1>ALL TRIPS</h1>
-
   </main>
   <aside class="traveler-aside" tabindex="0">
     <h1>PROFILE</h1>
-
   </aside>
   <footer class="traveler-footer" tabindex="0">
-    <h1>FOOTER</h1>
-
   </footer>
- 
 
-  
-  <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
 </body>
 </html>
