Add deny button and attach functionality

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         <section class="admin-content-display content-display">
         </section>
         <button class="approve-button">APPROVE</button>
+        <button class="deny-button">DENY</button>
       </article>
     </article>
     <nav class="admin-nav" tabindex="0">
